fixed alignment for navbar and carousel

--- a/src/App.css
+++ b/src/App.css
@@ -26,6 +26,7 @@ header #site_name {
 =========*/
 
 #navbar {
+  text-align: center;
   font-size: 20px;
   margin-top: 50px;
 }
@@ -41,6 +42,7 @@ ul li {
 =========*/
 
 .slider_wrapper {
+  margin: 0 auto;
   height: 350px;
   overflow: hidden;
   background: center center no-repeat fixed;
@@ -59,6 +61,7 @@ ul li {
 
 .article-thumb {
   display: inline-block;
-  border-bottom: 1px solid black;
+  border: 1px solid black;
   width: 200px;
+  padding: 8px;
 }
